--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "",
   "devDependencies": {
-    "@types/chrome": "^0.0.181",
+    "@types/chrome": "^0.0.278",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "clean-webpack-plugin": "^3.0.0",
@@ -22,7 +22,8 @@
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.1.0",
-    "typescript": "^4.2.4",
+    "typescript": "^5.6.3",
+    "valibot": "^0.42.1",
     "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0",
     "webpack-merge": "^5.7.3"
