--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -16,7 +16,8 @@
   "permissions": ["storage"],
   "options_page": "options.html",
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
