[skip ci] add tailwind css

--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "@types/chrome": "^0.0.278",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "autoprefixer": "^10.4.20",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.4",
     "html-webpack-plugin": "^4.5.2",
+    "postcss": "^8.4.47",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^10.0.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "sass": "^1.63.6",
-    "sass-loader": "^13.3.2",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^3.4.14",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.1.0",
     "typescript": "^5.6.3",
