--- a/.github/workflows/build-zip.yaml
+++ b/.github/workflows/build-zip.yaml
@@ -35,19 +35,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      #   - name: Download artifact
-      #     uses: actions/download-artifact@v4
-      #     with:
-      #       name: chrome-extension
-      #   - name: Release
-      #     uses: softprops/action-gh-release@v2
-      #     if: startsWith(github.ref, 'refs/tags/')
-      #     with:
-      #       files: chrome-extension.zip
-      #       token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: chrome-extension
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: dist/**
+          files: chrome-extension.zip
           token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Release
+      #   uses: softprops/action-gh-release@v2
+      #   if: startsWith(github.ref, 'refs/tags/')
+      #   with:
+      #     files: dist/**
+      #     token: ${{ secrets.GITHUB_TOKEN }}
