--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react chrome extension template",
   "scripts": {
     "start": "webpack --watch --progress --config webpack.dev.js",
-    "build": "webpack --progress --config webpack.prod.js"
+    "build": "set NODE_ENV=production && webpack --progress --config webpack.prod.js"
   },
   "author": "",
   "devDependencies": {
