--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "esModuleInterop": true,
     "paths": {
       "@/*": ["./src/shadcn/*"]
-    }
+    },
+    "strict": true,
+    "keyofStringsOnly": false
   }
 }
